[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/battle/skill/Normal/star2.png" type="Texture" id=1]
[ext_resource path="res://assets/battle/skill/Normal/voice.png" type="Texture" id=2]
[ext_resource path="res://assets/battle/skill/Normal/star1.png" type="Texture" id=3]
[ext_resource path="res://src/combat/battlers/skills/normalSkill/Growl/Growl.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "voice"
tracks/0/type = "value"
tracks/0/path = NodePath("Voice:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 512.289, 655.396 ), Vector2( 1202.43, 279.215 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Voice:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Voice3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 512.289, 655.396 ), Vector2( 512.289, 655.396 ), Vector2( 1202.43, 279.215 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Voice3:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Voice4:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 512.289, 655.396 ), Vector2( 512.289, 655.396 ), Vector2( 1202.43, 279.215 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Voice4:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Voice5:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 512.289, 655.396 ), Vector2( 512.289, 655.396 ), Vector2( 1202.43, 279.215 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Voice5:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Voice2:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 512.289, 655.396 ), Vector2( 512.289, 655.396 ), Vector2( 1202.43, 279.215 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Voice2:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Voice:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Voice2:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Voice3:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Voice4:scale")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Voice5:scale")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Voice:visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Voice2:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("Voice3:visible")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("Voice4:visible")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("Voice5:visible")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0.4, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="growl" type="Position2D"]
position = Vector2( 150, -70 )
script = ExtResource( 4 )

[node name="Voice" type="Node2D" parent="."]
visible = false
position = Vector2( 1202.43, 279.215 )
scale = Vector2( 2, 2 )

[node name="circle" type="Sprite" parent="Voice"]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="star" type="Sprite" parent="Voice"]
position = Vector2( -40.3175, -1.88989 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="star2" type="Sprite" parent="Voice"]
position = Vector2( -10.7094, 26.4583 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="star3" type="Sprite" parent="Voice"]
position = Vector2( 28.9782, 10.7094 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="star5" type="Sprite" parent="Voice"]
position = Vector2( 8.81946, -32.128 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="star4" type="Sprite" parent="Voice"]
position = Vector2( 3.14981, -41.5775 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="Voice2" type="Node2D" parent="."]
visible = false
position = Vector2( 1202.43, 279.215 )
scale = Vector2( 2, 2 )

[node name="circle" type="Sprite" parent="Voice2"]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="star" type="Sprite" parent="Voice2"]
position = Vector2( -40.3175, -1.88989 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="star2" type="Sprite" parent="Voice2"]
position = Vector2( -10.7094, 26.4583 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="star3" type="Sprite" parent="Voice2"]
position = Vector2( 28.9782, 10.7094 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="star5" type="Sprite" parent="Voice2"]
position = Vector2( 8.81946, -32.128 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="star4" type="Sprite" parent="Voice2"]
position = Vector2( 3.14981, -41.5775 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="Voice3" type="Node2D" parent="."]
visible = false
position = Vector2( 1202.43, 279.215 )
scale = Vector2( 2, 2 )

[node name="circle" type="Sprite" parent="Voice3"]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="star" type="Sprite" parent="Voice3"]
position = Vector2( -40.3175, -1.88989 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="star2" type="Sprite" parent="Voice3"]
position = Vector2( -10.7094, 26.4583 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="star3" type="Sprite" parent="Voice3"]
position = Vector2( 28.9782, 10.7094 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="star5" type="Sprite" parent="Voice3"]
position = Vector2( 8.81946, -32.128 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="star4" type="Sprite" parent="Voice3"]
position = Vector2( 3.14981, -41.5775 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="Voice4" type="Node2D" parent="."]
visible = false
position = Vector2( 1202.43, 279.215 )
scale = Vector2( 2, 2 )

[node name="circle" type="Sprite" parent="Voice4"]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="star" type="Sprite" parent="Voice4"]
position = Vector2( -40.3175, -1.88989 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="star2" type="Sprite" parent="Voice4"]
position = Vector2( -10.7094, 26.4583 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="star3" type="Sprite" parent="Voice4"]
position = Vector2( 28.9782, 10.7094 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="star5" type="Sprite" parent="Voice4"]
position = Vector2( 8.81946, -32.128 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="star4" type="Sprite" parent="Voice4"]
position = Vector2( 3.14981, -41.5775 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="Voice5" type="Node2D" parent="."]
visible = false
position = Vector2( 1202.43, 279.215 )
scale = Vector2( 2, 2 )

[node name="circle" type="Sprite" parent="Voice5"]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="star" type="Sprite" parent="Voice5"]
position = Vector2( -40.3175, -1.88989 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="star2" type="Sprite" parent="Voice5"]
position = Vector2( -10.7094, 26.4583 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="star3" type="Sprite" parent="Voice5"]
position = Vector2( 28.9782, 10.7094 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="star5" type="Sprite" parent="Voice5"]
position = Vector2( 8.81946, -32.128 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="star4" type="Sprite" parent="Voice5"]
position = Vector2( 3.14981, -41.5775 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/voice = SubResource( 1 )
